@@ -14,6 +14,7 @@ v 8.12.0 (unreleased)
   - Automatically expand hidden discussions when accessed by a permalink !5585 (Mike Greiling)
   - Fix groups sort dropdown alignment (ClemMakesApps)
   - Add horizontal scrolling to all sub-navs on mobile viewports (ClemMakesApps)
+  - Fix markdown help references (ClemMakesApps)
   - Added tests for diff notes
   - Add delimiter to project stars and forks count (ClemMakesApps)
   - Fix badge count alignment (ClemMakesApps)
